# Frama-C-Conc2Seq

./: .merlin  Conc2Seq.mli  Makefile  Makefile.in  README.md  atomic.h  atomic_header.ml  atomic_header.mli  atomic_spec.ml  atomic_spec.mli  code_transformer.ml  code_transformer.mli  configure.in  errors.ml  fun_preds.ml  fun_preds.mli  functions.ml  functions.mli  interleavings.ml  interleavings.mli  lemmas.ml  lemmas.mli  logic_transformer.ml  logic_transformer.mli  old_project.ml  old_project.mli  options.ml  program_counter.ml  program_counter.mli  query.ml  query.mli  register.ml  simfuncs_spec.ml  simfuncs_spec.mli  simulation.ml  simulation.mli  simulation_axioms.ml  simulation_axioms.mli  simulation_invariant.ml  simulation_invariant.mli  (+14 more)
test/: atomic_block.c  atomic_call.c  atomify.c  atomify_loop.c  base_annot.c  block.c  calling_functions.c  example.c  exchange.c  invariant.c  local_array.c  loop.c  nbstack.c  non_atomic_call.c  occ_axiom.h  predicates_and_logic_functions.c  sum.c  sw_mr.c  switch.c  to_atomify.c  void_loop.c
tests/: ptests_config  test_config
tests/variables/: variables.c
tests/variables/oracle/: variables.res.oracle
